Fixed about center alignment

--- a/agora-app/front-end/src/index.css
+++ b/agora-app/front-end/src/index.css
@@ -761,6 +761,9 @@ body {
 .about-container {
   margin: 20px 40px;
   color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .heading {
@@ -861,7 +864,7 @@ body {
 
 
 
-form { max-width:420px; margin:50px auto; }
+form { max-width:420px; }
 
 .feedback-input {
   color:rgb(0, 0, 0);
